# ROS_Debugging

./: README.md
ROS1/image_pipeline_ws/src/image_pipeline/: CMakeLists.txt  package.xml
ROS1/image_pipeline_ws/src/image_pipeline/config/: param.yaml
ROS1/image_pipeline_ws/src/image_pipeline/launch/: image_pipeline.launch  image_pipeline_cpp.launch  image_pipeline_cpp_py.launch
ROS1/image_pipeline_ws/src/image_pipeline/scripts/: publisher.py  subscriber.py
ROS1/image_pipeline_ws/src/image_pipeline/src/: publisher_cpp.cpp  subscriber_cpp.cpp
ROS2/image_pipeline_ws/src/image_pipeline/: CMakeLists.txt  package.xml
ROS2/image_pipeline_ws/src/image_pipeline/image_pipeline/: publisher_py.py  subscriber_py.py
ROS2/image_pipeline_ws/src/image_pipeline/launch/: publisher_launch_cpp.py  publisher_launch_cpp_py.py  publisher_launch_py.py
ROS2/image_pipeline_ws/src/image_pipeline/scripts/: setup.py
ROS2/image_pipeline_ws/src/image_pipeline/src/: publisher_cpp.cpp  subscriber_cpp.cpp
